# chicago-location-investigator

./: .gitignore  README.md  evals.py  main.py  pyproject.toml  tools.py
.github/workflows/: test.yml
chicago_location_investigator/: evals.py  main.py
chicago_location_investigator/models/: anthropic.py  bedrock.py
chicago_location_investigator/tools/: data_model.py  tools_art.py  tools_crash.py  tools_food.py  tools_geocoding.py  tools_googlemaps.py  tools_permits.py  tools_violations.py  tools_wards.py  write_results.py
evaluation/: eval_review.ipynb
models/: ollama.py
tests/: test_basic.py  test_main.py  test_tools.py
tools/: tools_food.py  tools_geocoding.py  tools_permits.py  tools_violations.py
