[project]
name = "nebulock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "deepeval>=3.7.5",
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
