[project]
name = "chicago-location-investigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "altair>=6.0.0",
    "deepeval>=3.7.5",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]
